# Legal-Doc-Comparison-Tool

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  run_app.py
.streamlit/: config.toml
data/eval/nda/: ground_truth.json  version_A.docx  version_B.docx
data/eval/services/: ground_truth.json  version_A.docx  version_B.docx
eval/: run_eval.py
scripts/: make_eval_set.py
src/legalcompare/: __init__.py  config.py  evaluation.py  pipeline.py  reporting.py  schemas.py
src/legalcompare/alignment/: __init__.py  aligner.py  similarity.py
src/legalcompare/comparison/: __init__.py  comparator.py  llm_client.py
src/legalcompare/ingestion/: __init__.py  loader.py  ocr.py
src/legalcompare/segmentation/: __init__.py  segmenter.py
tests/: smoke_alignment.py  smoke_ingestion.py
ui/: app.py
